--- a/ML_MIDTERM.ipynb
+++ b/ML_MIDTERM.ipynb
@@ -6,7 +6,7 @@
       "name": "ML_MIDTERM.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOxsIJRLYS0aHbPN9zGBosl",
+      "authorship_tag": "ABX9TyOa6jQnNeVYKGC3lfROdokN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3218,9 +3218,9 @@
         "## **CONCLUSION**\n",
         "\n",
         "### 1. Since the data is purely a binary classification problem supervised algorithms performed better than unsupervised \n",
-        "### 2. Traget feature is binary label so a linear regression model cant apply.\n",
+        "### 2. Target feature is binary label so a linear regression model cant apply.\n",
         "### 3. Upon all the model we can see in the above chart XG boost performing better.\n",
-        "### **4. Tried to DO data enrinchment by tweeking the k fold validation number and these are the best found results.**"
+        "### **4. Tried to DO data enrinchment by tweeking the k fold validation number and these are the best found results. A data enrichment process can  also be within the data optimizing and measuring at different levels and understanding the model failures**"
       ]
     },
     {
